<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        android:actionLayout="@layout/cart_layout"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile" />

</menu>