<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.grocery_app.citymart.ui.fragment.profile.ProfileFragment">


        <RelativeLayout
            android:id="@+id/ll1_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/offwhite"
            android:elevation="@dimen/_10sdp"
            android:orientation="horizontal"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_signAppbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/sign_in"
                android:textColor="@color/primary"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/personal_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"

                    android:text="@string/personal_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:drawableRightCompat="@drawable/ic_right" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"

                    android:text="@string/choose_language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:drawableRightCompat="@drawable/ic_right" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"

                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:drawableRightCompat="@drawable/ic_right" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@color/black" />
                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:drawableRightCompat="@drawable/ic_right" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/help"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/faqLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/faq_links"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"

                    android:text="@string/past_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_restaurant_order"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_60sdp"
                        android:background="@drawable/login_btn_background"
                        android:text="@string/restaurants"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_mart_order"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_btn_background"
                        android:text="@string/mart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:background="@color/black" />

                <ProgressBar
                    android:id="@+id/progressDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/color_green"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_30sdp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recylerview_ProfileFrag"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_240sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/rv_profilefragment" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_view_more"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/login_btn_background"
                        android:text="View More"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>