<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.grocery_app.citymart.ui.fragment.profile.fragments.myaccount.contactUs.ContactUs" >
        <data>


        </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="12dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/contentToolbarColor"
                    android:elevation="4dp"
                    app:contentInsetStart="0dp"
                    app:layout_constraintStart_toStartOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp">


                        <ImageView
                            android:id="@+id/back_btn"
                            android:layout_width="55dp"
                            android:layout_height="25dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="11dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/ic_baseline_arrow_back_24"
                            app:tint="@color/color_green" />

                        <TextView
                            android:id="@+id/title_city_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/sign_in"
                            android:textColor="@color/contentTextColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                app:layout_constraintVertical_bias="0.0">


                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_black"
                    android:clickable="false"
                    android:padding="10dp"
                    android:text="@string/address"
                    android:textColor="@color/pure_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="74dp"
                    android:text="@string/addres"
                    android:textSize="12sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                app:layout_constraintVertical_bias="0.182">


                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_black"
                    android:clickable="false"
                    android:padding="10dp"
                    android:text="@string/contactno"
                    android:textColor="@color/pure_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="38dp"
                    android:text="@string/mobilenumber"
                    android:textSize="12sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                app:layout_constraintVertical_bias="0.303">


                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_black"
                    android:clickable="false"
                    android:padding="10dp"
                    android:text="@string/iskylar_mail"
                    android:textColor="@color/pure_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="39dp"
                    android:text="@string/email"
                    android:textSize="12sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                app:layout_constraintVertical_bias="0.458">


                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/corner_black"
                    android:clickable="false"
                    android:padding="10dp"
                    android:text="@string/banglourAddress"
                    android:textColor="@color/pure_black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="57dp"
                    android:text="@string/second_address"
                    android:textSize="12sp" />


            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </layout>
